# libsecret-rs

./: .gitignore  Cargo.toml  LICENSE  Secret-1.gir
libsecret/: Cargo.toml  Gir.toml
libsecret/src/: lib.rs
libsecret/src/auto/: collection.rs  constants.rs  enums.rs  flags.rs  functions.rs  item.rs  mod.rs  prompt.rs  retrievable.rs  schema.rs  schema_attribute.rs  service.rs  value.rs  versions.txt
libsecret/sys/: Cargo.toml  Gir.toml  build.rs
libsecret/sys/src/: lib.rs
libsecret/sys/tests/: abi.rs  constant.c  layout.c  manual.h
