[package]
name = "libsecret"
version = "0.1.0"
authors = ["Christopher Davis <christopherdavis@gnome.org>"]
keywords = [
    'libsecret',
    'secret-service',
    'freedesktop',
    'gnome',
    'gtk-rs',
    'secret'
]
edition = "2018"

[dependencies]
bitflags = "1.2"
once_cell = "1.4"

[dependencies.ffi]
package = "libsecret-sys"
path = "./sys"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs/"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs/"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs/"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs/"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs/"
