[package]
name = "libsecret-sys"
version = "0.1.0"
authors = ["Christopher Davis <christopherdavis@gnome.org>"]
build = "build.rs"
edition = "2018"

[package.metadata.system-deps.libsecret_1]
name = "libsecret-1"
version = "0.19"

[package.metadata.system-deps.libsecret_1.feature-versions]
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "libsecret_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs/"

[dependencies.gio-sys]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs/"

[dependencies.gobject-sys]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs/"

[build-dependencies]
system-deps = "1.3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
